refactor(domain): preserve insertion order and immutability in RoundResult snapshot